[tool.poetry]
name = "voting-sim"
version = "0.1.0"
description = ""
authors = ["Joey <joeylove26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
